# OS_Lab

./: CMakeLists.txt  Daemon.cpp  Daemon.hpp  README.md  README1.md  main.cpp
LAB1/: Config.cpp  Config.hpp  Daemon  Daemon.cpp  Daemon.hpp  README.md  build.sh  config.txt  main.cpp
LAB1/folder1/: 1.txt  log.txt
Lab2/: CMakeLists.txt  build.sh
Lab2/client/: client.cpp  client.hpp
Lab2/connections/: conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_socket.cpp  conn_socket.hpp  connection.hpp
Lab2/host/: host.cpp  host.hpp
Lab2/proc_queue/: proc_queue.hpp
folder1/: 2.txt
folder2/: 3.txt  log.txt
lab3/: CMakeLists.txt  README.md  build.sh  main.cpp
lab3/structure/: fine_grained_set.cpp  fine_grained_set.hpp  node.cpp  node.hpp  set.hpp
lab3/test/: test.cpp  test.hpp
